# snapemu-workflow

./: .gitignore  Cargo.toml  README.md  install.sh
.github/: setup.sh
.github/workflows/: build.yml  drafter.yaml  test.yaml
common_define/: Cargo.toml
common_define/src/: client_id.rs  decode.rs  id.rs  key.rs  lib.rs  lora.rs  lorawan_bridge.rs  product.rs  time.rs
common_define/src/db/: addr.rs  data.rs  eui.rs  group_permission.rs  key.rs  map.rs  mod.rs
common_define/src/db/entities/: mod.rs  snap_admin.rs  snap_config.rs  snap_decode_script.rs  snap_device_authority.rs  snap_device_data.rs  snap_device_data_name.rs  snap_device_function.rs  snap_device_group.rs  snap_device_group_map_user.rs  snap_device_lora_gate.rs  snap_device_lora_node.rs  snap_device_map_group.rs  snap_device_mqtt.rs  snap_devices.rs  snap_downlink.rs  snap_integration_mqtt.rs  snap_product_info.rs  snap_snap_device.rs  snap_user_token.rs  snap_users.rs  snap_users_tripartite.rs
common_define/src/event/: log.rs  lora_gateway.rs  lora_node.rs  mod.rs
device_info/: Cargo.toml
device_info/src/: lib.rs  snap.rs
device_info/src/lorawan/: gateway.rs  mod.rs  node.rs
devices_manager/: Cargo.toml
devices_manager/src/: decode.rs  lib.rs  load.rs  main.rs
devices_manager/src/event/: gateway.rs  mod.rs  platform.rs
devices_manager/src/integration/: mqtt.rs
devices_manager/src/man/: data.rs  decode.rs  downlink.rs  lora.rs  mod.rs  mq.rs  mqtt.rs  redis_client.rs
devices_manager/src/mqtt/: down.rs  mod.rs  up.rs
devices_manager/src/protocol/: mod.rs
devices_manager/src/protocol/lora/: data.rs  join_accept.rs  join_request.rs  mod.rs  parse.rs  payload.rs
devices_manager/src/protocol/lora/source/: mod.rs  udp.rs
devices_manager/src/protocol/snap/: gateway.rs  mod.rs  payload.rs
devices_manager/src/service/: custom_gateway.rs  data_decode.rs  device.rs  gateway_statue.rs  lorawan_gateway.rs  lorawan_node.rs  mod.rs
docker/: Dockerfile.alpine.build  Dockerfile.alpine.builder  Dockerfile.alpine.modules  Dockerfile.alpine.web  Dockerfile.build  Dockerfile.builder  Dockerfile.modules  snapemu.conf
hash_name/: Cargo.toml
hash_name/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240904_020441_create_table.rs
snap_api/: Cargo.toml
snap_api/locales/: error.yaml  message.yml
snap_api/resources/: contact.html  delete.html  sign.zh.html  valicode.html
snap_api/src/: error.rs  lib.rs  load.rs  local_key.rs  main.rs
snap_api/src/api/: mod.rs
snap_api/src/api/restful/: app.rs  contact.rs  data.rs  decode.rs  mod.rs  verify.rs
snap_api/src/api/restful/admin/: config.rs  device.rs  group.rs  log.rs  login.rs  mod.rs  product.rs  user.rs
snap_api/src/api/restful/device/: devices.rs  down.rs  group.rs  io.rs  log.rs  lorawan.rs  map.rs  mod.rs  order.rs  product.rs  query.rs
snap_api/src/api/restful/integration/: mod.rs  mqtt.rs
snap_api/src/api/restful/show/: device.rs  mod.rs
snap_api/src/api/restful/user/: delete.rs  info.rs  login.rs  mod.rs  picture.rs  refresh.rs  signup.rs
snap_api/src/cache/: device_cache.rs  device_group_cache.rs  mod.rs  product_name_cache.rs
snap_api/src/man/: device_predefine.rs  email.rs  mod.rs  node_event.rs  redis_client.rs  send_timeout.rs  sync_device.rs  user_manager.rs  user_status.rs
snap_api/src/service/: mod.rs  model.rs  mqtt.rs  snap.rs
snap_api/src/service/data/: mod.rs  query.rs  update.rs
snap_api/src/service/decode/: mod.rs  script.rs  test.rs
snap_api/src/service/device/: define.rs  device.rs  function.rs  group.rs  mod.rs  order.rs
snap_api/src/service/integration/: mod.rs  mqtt.rs
snap_api/src/service/lorawan/: gateway.rs  mod.rs  node.rs
snap_api/src/service/user/: auth.rs  info.rs  login.rs  mod.rs  signup.rs  token.rs
snap_api/src/utils/: base64.rs  check.rs  hash.rs  mod.rs  model.rs  passwd.rs  random.rs
snap_config/: Cargo.toml
snap_config/src/: lib.rs  load.rs
snap_i18n/: Cargo.toml
snap_i18n/src/: lib.rs
snap_model/: Cargo.toml
snap_model/src/: lib.rs
snapemu-web/: README.md  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
snapemu-web/locales/: en.json  zh.json
snapemu-web/public/policy/: privacy.html  user-service.html
snapemu-web/src/: App.vue  main.ts
snapemu-web/src/assets/: main.css
snapemu-web/src/components/: RequestDelete.vue
snapemu-web/src/components/device/: CodeMap.vue  DecodeMod.vue  DecodeMsg.vue  DeviceAddr.vue  DeviceBattery.vue  DeviceEvent.vue  DeviceInfo.vue  PayloadShow.vue
snapemu-web/src/components/event/: DownLinkData.vue  GatewayEvent.vue  JoinAccept.vue  JoinRequest.vue  UplinkData.vue
snapemu-web/src/components/icon/: DeviceIcon.vue  DeviceIconSelected.vue  GroupIcon.vue  IntegrationIcon.vue  OverViewIcon.vue
snapemu-web/src/components/interaction/: DeleteDialog.vue
snapemu-web/src/components/user/: SiteLang.vue  UserEdit.vue  UserInfo.vue  UserPicture.vue
snapemu-web/src/components/widget/: ActiveTime.vue  ActiveTimeView.vue  ArrowSvg.vue  BackSvg.vue  Battery.vue  CodeEditor.vue  DataView.vue  EarthSvg.vue  HeadBack.vue  HexInput.vue  MessageAlert.vue  MessageBox.vue  TextClipboard.vue  TextInput.vue  TimeData.vue  TimeDataTitle.vue  TimeFormat.vue
snapemu-web/src/composables/: api.ts  device_time.ts  i18n.ts  notify.ts  request.ts  setting.ts
snapemu-web/src/router/: index.ts
snapemu-web/src/stores/: cache.ts  index.ts  setting.ts
snapemu-web/src/type/: component.d.ts  event.d.ts  lora.ts  response.d.ts
snapemu-web/src/utils/: base64.ts  cppcode.ts  define.ts  str.ts
snapemu-web/src/views/dashboard/: DashboardIndex.vue  DashboardOverview.vue  DeviceAddPage.vue
snapemu-web/src/views/dashboard/device/: DataCard.vue  DeviceCard.vue  DeviceCreate.vue  DeviceHome.vue  DeviceSelf.vue
snapemu-web/src/views/dashboard/group/: AddDevice.vue  DeviceGroupNew.vue  GroupIndex.vue  GroupInfo.vue
snapemu-web/src/views/user/: SignUp.vue  UserIndex.vue  UserLogin.vue
utils/: Cargo.toml
utils/src/: base64.rs  eui.rs  lib.rs  log_down.rs
(+10 files in other folders)
