[package]
name = "common_define"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { workspace = true, features=["derive"]}
uuid = { workspace = true, features = ["std", "serde"]}
chrono = { workspace = true, features = ["serde"] }

base64.workspace = true
lorawan.workspace = true
derive_more.workspace = true
derive-new.workspace = true
hex.workspace = true
const_format.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
redis-macros.workspace = true
redis = { workspace = true, features = ["aio", "tokio-comp"] }
rand.workspace = true
thiserror.workspace = true
strum = { workspace = true, features = ["derive"] }
sea-orm.workspace = true

