[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }

[dependencies.sea-orm-migration]
workspace = true
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]
