[package]
name = "snap_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_define.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
anyhow.workspace = true
